@@ -1,3 +1,10 @@
+2010-02-01  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/regexec.c (ccondissect, crevdissect): [Bug 2942697]: Rework
+	these functions so that certain pathological patterns are matched much
+	more rapidly. Many thanks to Tom Lane for dianosing this issue and
+	providing an initial patch.
+
 2010-01-30  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclCompile.c (tclInstructionTable):	Bytecode instructions
